refactor(Mobile):debug and keep UI at home activity and update version 2.0.0

--- a/app/src/main/res/layout/activity_home__user.xml
+++ b/app/src/main/res/layout/activity_home__user.xml
@@ -6,319 +6,30 @@
     android:layout_height="match_parent"
     tools:context=".Home_User"
     android:id="@+id/home_user"
-    android:background="@drawable/button_style"
+    android:background="@drawable/all_background"
     >
-
-
-
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/R1"
-
-    >
-
-    <ImageView
-        android:layout_width="57dp"
-        android:layout_height="49dp"
-        android:id="@+id/bottonop"
-        android:src="@drawable/ic_settings_black_24dp"></ImageView>
-    <ImageView
-        android:layout_width="57dp"
-        android:layout_height="49dp"
-        android:id="@+id/buttonRe"
-        android:layout_alignParentRight="true"
-        android:src="@drawable/ic_assessment_black_24dp"></ImageView>
-
-</RelativeLayout>
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-android:layout_below="@+id/R1"
-    android:background="@drawable/bacckground_color"
-    >
-
-    <RelativeLayout
-        android:id="@+id/R2"
-        android:layout_below="@id/R1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="50sp"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="50sp"
-        android:elevation="20dp"
-        >
-    <com.github.mikephil.charting.charts.PieChart
-        android:layout_centerHorizontal="true"
-        android:id="@+id/chart"
-        android:innerRadius="100dp"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        ></com.github.mikephil.charting.charts.PieChart>
-    </RelativeLayout>
-
-    /////////////////
 
     <LinearLayout
-        android:layout_marginTop="40sp"
-        android:id="@+id/R3"
-        android:layout_below="@id/R2"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:weightSum="4"
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:gravity="center_horizontal"
-        android:layout_marginRight="15dp"
-        android:layout_marginLeft="15dp"
-        >
-    <RelativeLayout
-        android:id="@+id/Rtext1"
-        android:layout_below="@id/R2"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:weightSum="4"
-        android:background="@drawable/background_object"
-        android:elevation="20dp"
-        android:layout_marginLeft="15sp">
-        <TextView
-            android:id="@+id/numberBMI"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:text="0"
-            android:textColor="#FFFFFF"
-            android:gravity="center_horizontal"
-            android:textSize="25sp"></TextView>
+        android:layout_above="@id/bottom_navigation"
+        />
 
-        <TextView
-            android:id="@+id/textBMI"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:text="BMI"
-            android:layout_below="@id/numberBMI"
-            android:textColor="#FFFFFF"
-            android:textSize="20sp"></TextView>
-
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/Rtext2"
-        android:layout_below="@id/R2"
-        android:layout_width="100dp"
-        android:layout_toRightOf="@id/Rtext1"
-        android:layout_height="wrap_content"
-        android:weightSum="4"
-        android:background="@drawable/background_object"
-        android:layout_marginRight="15sp"
-        android:layout_marginLeft="15sp"
-        android:elevation="20dp">
-        <TextView
-            android:id="@+id/numberBMR"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:text="0"
-            android:textColor="#FFFFFF"
-            android:gravity="center_horizontal"
-            android:textSize="25sp"></TextView>
-
-        <TextView
-            android:id="@+id/textBMR"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:text="BMR"
-            android:layout_below="@id/numberBMR"
-            android:textColor="#FFFFFF"
-            android:textSize="20sp"></TextView>
-
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/Rtext3"
-        android:layout_below="@id/R2"
-        android:layout_width="100dp"
-        android:layout_toRightOf="@id/Rtext2"
-        android:layout_height="wrap_content"
-        android:weightSum="4"
-        android:background="@drawable/background_object"
-        android:layout_marginRight="15sp"
-        android:elevation="20dp"
-        >
-        <TextView
-            android:id="@+id/numberTDEE"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:text="0"
-            android:textColor="#FFFFFF"
-            android:gravity="center_horizontal"
-            android:textSize="25sp"></TextView>
-
-        <TextView
-            android:id="@+id/textTDEE"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:text="TDEE"
-            android:layout_below="@id/numberTDEE"
-            android:textColor="#FFFFFF"
-            android:textSize="20sp"></TextView>
-
-
-    </RelativeLayout>
-    </LinearLayout>
-    //////////////////////////
-
-   <!-- <LinearLayout
-        android:layout_marginTop="40sp"
-        android:id="@+id/R3"
-        android:layout_below="@id/R2"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:weightSum="4"
-        android:background="@drawable/app_bar_back_up"
-        android:orientation="horizontal"
-        android:layout_marginRight="15sp"
-        android:layout_marginLeft="15sp"
-        >
-
-
-    <TextView
-        android:id="@+id/numberBMR"
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="0"
-        android:textColor="#FFFFFF"
-        android:gravity="center"
-        android:layout_weight="1"
-        android:textSize="25sp"></TextView>
-
-    <TextView
-        android:id="@+id/numberTDEE"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="0"
-        android:textColor="#FFFFFF"
-        android:gravity="center"
-        android:layout_weight="1"
-        android:textSize="25sp"></TextView>
-    <TextView
-        android:id="@+id/numberTargete"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="0"
-        android:textColor="#FFFFFF"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:textSize="25sp"></TextView>
-    </LinearLayout>-->
-
-    <!--  <LinearLayout
-         android:id="@+id/R4"
-         android:layout_width="match_parent"
-         android:layout_below="@id/R3"
-         android:weightSum="4"
-         android:layout_height="wrap_content"
-         android:orientation="horizontal"
-         android:background="@drawable/app_bar_back_down"
-         android:layout_marginRight="15sp"
-         android:layout_marginLeft="15sp"
-         >
+        android:layout_alignParentBottom="true"
+        android:background="#cccccc"
+        app:itemIconTint="@color/bottom_nav_item_color"
+        app:itemTextAppearanceActive="@style/navTextActive"
+        app:itemTextAppearanceInactive="@style/navTextInactive"
+        app:itemTextColor="@color/bottom_nav_item_color"
+        app:labelVisibilityMode="auto"
+        app:itemHorizontalTranslationEnabled="true"
+        app:menu="@menu/my_bottom_nav_menu" />
 
 
-
-         <TextView
-             android:id="@+id/textBMR"
-             android:layout_width="70dp"
-             android:layout_height="wrap_content"
-             android:layout_weight="1"
-             android:gravity="center_horizontal"
-             android:text="BMR"
-             android:textColor="#FFFFFF"
-             android:textSize="20sp"></TextView>
-
-
-     <TextView
-         android:id="@+id/textTDEE"
-         android:layout_width="70dp"
-         android:layout_height="wrap_content"
-         android:text="TDEE"
-         android:layout_weight="1"
-         android:textColor="#FFFFFF"
-         android:gravity="center_horizontal"
-         android:textSize="20sp"></TextView>
-
-     <TextView
-         android:id="@+id/texttarget"
-         android:layout_width="70dp"
-         android:layout_height="wrap_content"
-         android:text="Target"
-         android:layout_weight="1"
-         android:textColor="#FFFFFF"
-         android:gravity="center_horizontal"
-         android:textSize="20sp"></TextView>
-
-     </LinearLayout>-->
-
-
-
-     <LinearLayout
-         android:id="@+id/R5"
-         android:layout_width="match_parent"
-         android:layout_below="@id/R3"
-         android:layout_height="wrap_content"
-         android:orientation="horizontal"
-         android:layout_marginTop="20sp"
-         >
-     <Button
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content"
-         android:id="@+id/addfood"
-         android:text="เพิ่มรายการอาหาร"
-         android:layout_marginTop="25sp"
-         android:layout_weight="1"
-         android:layout_marginRight="30sp"
-         android:layout_marginLeft="30sp"
-         android:textColor="#ffffff"
-         android:background="@drawable/button_login_style"
-         ></Button>
-
-     <Button
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content"
-         android:id="@+id/addworkout"
-         android:layout_weight="1"
-         android:text="เพิ่มรายการกิจกกรรม"
-         android:textSize="13dp"
-         android:layout_alignParentRight="true"
-         android:layout_marginTop="25sp"
-         android:layout_marginRight="30sp"
-         android:layout_marginLeft="30sp"
-         android:textColor="#ffffff"
-         android:background="@drawable/button_login_style"
-         ></Button>
-     </LinearLayout>
-     <LinearLayout
-         android:id="@+id/R6"
-         android:layout_width="match_parent"
-         android:layout_below="@id/R5"
-         android:layout_height="wrap_content"
-         android:orientation="horizontal"
-         android:layout_marginTop="20sp"
-         >
-     <Button
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content"
-         android:id="@+id/signout"
-         android:layout_weight="1"
-         android:text="ออกจากระบบ"
-         android:layout_alignParentRight="true"
-         android:layout_marginRight="30sp"
-         android:layout_marginLeft="30sp"
-         android:textColor="#ffffff"
-         android:background="@drawable/button_login_style"
-         ></Button>
-     </LinearLayout>
-</RelativeLayout>
  </RelativeLayout>
