--- a/app/src/main/res/layout/listexcercise_show_fragment.xml
+++ b/app/src/main/res/layout/listexcercise_show_fragment.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="60dp"
-    android:gravity="center"
-    android:id="@+id/input"
-    >
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+
         >
         <TextView
             android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_weight="1"
-            android:textColor="#FFFFFF"
-            android:layout_height="wrap_content"
-            android:textSize="25dp"
+            android:textColor="#000000"
+            android:gravity="center_vertical"
+            android:layout_height="match_parent"
+            android:textSize="20dp"
+
             android:text="name" />
         <LinearLayout
             android:layout_width="150dp"
@@ -27,19 +30,20 @@
             <TextView
                 android:id="@+id/kcal"
                 android:layout_width="match_parent"
-                android:textColor="#FFFFFF"
+                android:textColor="#000000"
                 android:layout_height="wrap_content"
-                android:layout_weight="6"
-                android:textSize="30dp"
-
+                android:layout_weight="1"
+                android:textSize="20dp"
+                android:gravity="center"
                 android:text="kcal"/>
             <TextView
                 android:id="@+id/numkcal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="6"
-                android:textSize="30dp"
-                android:textColor="#FFFFFF"
+                android:layout_weight="1"
+                android:textSize="20dp"
+                android:gravity="center"
+                android:textColor="#000000"
                 android:text="kcal" />
         </LinearLayout>
 
@@ -47,5 +51,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#FFFFFF" />
+        android:background="#000000" />
+
 </LinearLayout>
