--- a/app/src/main/res/layout/activity_home__user.xml
+++ b/app/src/main/res/layout/activity_home__user.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".Home_User"
     android:id="@+id/home_user"
-    android:background="@drawable/all_background"
+    android:background="@drawable/backgroud_status"
     >
 
     <LinearLayout
