--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="myPeach">#ffffff</color>
     <color name="red">#262626</color>
     <color name="colorcarenda">#5252e0</color>
+    <color name="gray">#e6e6e6</color>
 </resources>
