--- a/app/src/main/res/drawable/background_object.xml
+++ b/app/src/main/res/drawable/background_object.xml
@@ -10,18 +10,18 @@
            android:endColor="#202e51"
            android:type="linear">
        </gradient>-->
-
-       <gradient
-           android:angle="90"
-           android:startColor="#3d528f"
-           android:endColor="#36477d"
-           android:type="linear">
-       </gradient>
+    <solid android:color="#ffffff"/>
+    <!--  <gradient
+          android:angle="90"
+          android:startColor="ffffff"
+          android:endColor="#36477d"
+          android:type="linear">
+      </gradient>-->
        <!-- <solid android:color="#ffffff"
             android:elevation="10dp"
             ></solid>-->
 
-    <stroke android:width="1dp"
+    <stroke android:width="2dp"
           android:color="#696969"/>
       <corners android:radius="15dp"/>
    <!-- <solid android:color="#334478"></solid>-->
