--- a/app/src/main/res/layout/fragment_setting_.xml
+++ b/app/src/main/res/layout/fragment_setting_.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,16 +7,105 @@
     tools:context=".SETTING_Fragment">
 
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:layout_margin="10dp"
+    android:id="@+id/r1"
+    >
+    <TextView
+        android:id="@+id/TV_setting_user"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="ตั้งค่าข้อมูล"
+        android:textColor="#ffffff"
+        android:textSize="20dp"
+        android:paddingLeft="10dp"
+        android:layout_marginBottom="10dp"
+        ></TextView>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/aamy_recycler_view"
+        android:id="@+id/setting_user"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         android:layout_marginBottom="1dp"
+        android:paddingBottom="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:background="@drawable/background_object"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/app_bar" />
+</LinearLayout>
 
-</RelativeLayout>
+    <!--<LinearLayout
+        android:id="@+id/r2"
+        android:layout_below="@id/r1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_margin="10dp"
+        >
+        <TextView
+            android:id="@+id/TVuknow"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="ตั้งค่าข้อมูล"
+            android:textColor="#ffffff"
+            android:textSize="20dp"
+            android:paddingLeft="10dp"
+            android:layout_marginBottom="10dp"
+            ></TextView>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/setting_food"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            android:layout_marginBottom="1dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/app_bar" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/r3"
+        android:layout_below="@id/r2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:orientation="vertical"
+        >
+
+        <TextView
+            android:id="@+id/TVuknow2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="ตั้งค่าข้อมูล"
+            android:textColor="#ffffff"
+            android:textSize="20dp"
+            android:paddingLeft="10dp"
+            android:layout_marginBottom="10dp"
+            ></TextView>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/setting_excercise"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            android:layout_marginBottom="1dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/app_bar" />
+    </LinearLayout>-->
+    </RelativeLayout>
+</ScrollView>
