--- a/app/src/main/res/layout/list_setting.xml
+++ b/app/src/main/res/layout/list_setting.xml
@@ -10,6 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp"
         >
         <TextView
             android:id="@+id/name"
@@ -17,18 +19,21 @@
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:paddingLeft="20dp"
-            android:textColor="#FFFFFF"
-            android:textSize="25dp"
-            android:text="name" />
+            android:paddingBottom="10dp"
+            android:textColor="#000"
+            android:textSize="15dp"
+            android:text="name"
+            android:paddingTop="10dp"/>
         <LinearLayout
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+
             >
 
             <ImageView
                 android:id="@+id/numkcal"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="36dp"
                 android:layout_gravity="right"
              android:paddingLeft="90sp"
@@ -39,5 +44,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#FFFFFF" />
+        android:background="#000"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
+        />
 </LinearLayout>
