--- a/app/src/main/res/menu/my_bottom_nav_menu.xml
+++ b/app/src/main/res/menu/my_bottom_nav_menu.xml
@@ -5,11 +5,11 @@
         android:id="@+id/item1"
         android:enabled="true"
         android:icon="@drawable/ic_home_black_24dp"
-        android:title="Home"/>
+        android:title="หน้าหลัก"/>
     <item
         android:id="@+id/item2"
         android:enabled="true"
         android:icon="@drawable/ic_settings_black_24dp"
-        android:title="Setting"/>
+        android:title="ตั้งค่า"/>
 
 </menu>
