--- a/app/src/main/res/drawable/background_listexcercise.xml
+++ b/app/src/main/res/drawable/background_listexcercise.xml
@@ -5,7 +5,7 @@
     <gradient
         android:angle="90"
         android:startColor="#b3b3b3"
-        android:endColor="#ff1a75"
+        android:endColor="#cc0052"
         android:type="linear">
     </gradient>
 </shape>
