--- a/app/src/main/res/layout/activity_savedatafood_user_private.xml
+++ b/app/src/main/res/layout/activity_savedatafood_user_private.xml
@@ -174,5 +174,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tatals" />
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/date"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.18"
+        app:layout_constraintStart_toEndOf="@+id/date"
+        app:layout_constraintTop_toTopOf="@+id/date"
+        app:srcCompat="@drawable/ic_date_range_black_24dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
