--- a/app/src/main/res/layout/fragment_home_listfood_.xml
+++ b/app/src/main/res/layout/fragment_home_listfood_.xml
@@ -58,6 +58,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="0"
+                android:gravity="center"
                 ></TextView>
 
 
@@ -67,6 +68,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="0"
+                android:gravity="center"
                 ></TextView>
         </LinearLayout>
 
