--- a/app/src/main/res/layout/fragment_setting_.xml
+++ b/app/src/main/res/layout/fragment_setting_.xml
@@ -9,7 +9,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        >
 
 
 <LinearLayout
@@ -107,5 +108,17 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/app_bar" />
     </LinearLayout>-->
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/signout"
+            android:text="ออกจากระบบ"
+            android:layout_below="@id/r1"
+            android:layout_marginRight="30sp"
+            android:layout_marginLeft="30sp"
+            android:textColor="#ffffff"
+            android:background="@drawable/button_login_style"
+            ></Button>
     </RelativeLayout>
+
 </ScrollView>
