--- a/app/src/main/res/layout-hdpi/fragment_home_status_.xml
+++ b/app/src/main/res/layout-hdpi/fragment_home_status_.xml
@@ -21,12 +21,20 @@
             android:layout_marginLeft="50sp"
             android:elevation="20dp"
             >
+            <ImageView
+                android:layout_width="250dp"
+                android:layout_height="250dp"
+                android:src="@drawable/ic_pie_chart_black_24dp"
+                android:id="@+id/pieimage"
+                android:layout_centerHorizontal="true"
+                />
             <com.github.mikephil.charting.charts.PieChart
                 android:layout_centerHorizontal="true"
                 android:id="@+id/chart"
                 android:innerRadius="100dp"
                 android:layout_width="250dp"
                 android:layout_height="250dp"
+                android:visibility="invisible"
                 ></com.github.mikephil.charting.charts.PieChart>
         </RelativeLayout>
 
