--- a/app/src/main/res/layout/activity_selectlistexcercise_user.xml
+++ b/app/src/main/res/layout/activity_selectlistexcercise_user.xml
@@ -7,7 +7,35 @@
     android:layout_height="match_parent"
     tools:context=".selectlistexcercise_user">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="invisible"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="#33cc33"
+        android:id="@+id/baranimation"
+        >
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="3"
+            android:src="@drawable/ic_check_circle_black_24dp"
+            android:layout_gravity="center_horizontal"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:textSize="15dp"
+            android:text="ข้อมูลได้ถูกบันทึกเเล้ว"
+            ></TextView>
 
+    </LinearLayout>
 
     <include
         android:id="@+id/searchView"
