--- a/app/src/main/res/layout/activity_list_edit_food.xml
+++ b/app/src/main/res/layout/activity_list_edit_food.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -17,56 +17,125 @@
         app:layout_constraintTop_toTopOf="parent"></include>
 
 
-    <TextView
-        android:id="@+id/textcalendar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="TextView"
-        android:textColor="#FFFFFF"
-        android:textSize="25sp"
-        app:layout_constraintEnd_toStartOf="@+id/texttotalkcal"
-        app:layout_constraintHorizontal_bias="0.415"
-        app:layout_constraintStart_toStartOf="@+id/recyclerView"
-        app:layout_constraintTop_toBottomOf="@+id/searchView" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+    <RelativeLayout
+        android:layout_below="@id/searchView"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/background_object"
         android:layout_width="match_parent"
-        android:layout_height="700dp"
-        android:layout_marginStart="2dp"
-        android:layout_marginTop="36dp"
-        android:windowSoftInputMode="adjustPan|adjustResize"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textcalendar" />
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/texttotalkcal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="12dp"
-        android:text="เเคลทั้งหมด"
-        android:textColor="#FFFFFF"
-        android:textSize="25sp"
-        app:layout_constraintBottom_toBottomOf="@+id/textcalendar"
-        app:layout_constraintEnd_toStartOf="@+id/numbertotalkcal"
-        app:layout_constraintTop_toTopOf="@+id/textcalendar"
-        app:layout_constraintVertical_bias="0.0" />
+        <RelativeLayout
+            android:id="@+id/a"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/numbertotalkcal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
-        android:text="3000"
-        android:textColor="#FFFFFF"
-        android:textSize="25sp"
-        app:layout_constraintBottom_toBottomOf="@+id/texttotalkcal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/texttotalkcal"
-        app:layout_constraintVertical_bias="0.0" />
+            <LinearLayout
+                android:id="@+id/Linone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="10dp"
+                android:orientation="vertical"
+                >
+                <TextView
+                    android:id="@+id/TVam"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="วันที่"
+                    ></TextView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+                <TextView
+                    android:id="@+id/TVcal"
+                    android:layout_below="@+id/TVam"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="เเคลทั้งหมด"
+                    ></TextView>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/Lintwo"
+                android:layout_toRightOf="@id/Linone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp"
+                android:orientation="vertical"
+                >
+                <TextView
+                    android:id="@+id/textcalendar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="0"
+                    android:gravity="center_vertical"
+                    ></TextView>
+
+
+                <TextView
+                    android:id="@+id/numbertotalkcalFOOD"
+                    android:layout_below="@+id/TVam"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="0"
+                    android:gravity="center_vertical"
+                    ></TextView>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/Linthree"
+                android:layout_toRightOf="@id/Lintwo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp"
+                android:orientation="vertical"
+                >
+
+                <ImageView
+                    android:id="@+id/callendaimage"
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:gravity="center_horizontal"
+                    android:src="@drawable/ic_date_range_black_24dp"></ImageView>
+                <TextView
+                    android:id="@+id/TVcaltwo"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:text="kcal"
+                    ></TextView>
+            </LinearLayout>
+
+
+        </RelativeLayout>
+
+        <LinearLayout
+            android:id="@+id/tt"
+            android:layout_below="@id/a"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#b3b3b3"
+            android:layout_margin="10dp"
+            />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            app_mt_speechMode="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tt"
+            android:scrollbars="vertical"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            android:windowSoftInputMode="adjustPan|adjustResize"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintVertical_bias="0.51" />
+    </RelativeLayout>
+
+</RelativeLayout>
