refactor(Mobile):Debug setting UI and  Change  vsersion 2.1.1

--- a/app/src/main/res/layout/activity_addexcercise_user.xml
+++ b/app/src/main/res/layout/activity_addexcercise_user.xml
@@ -51,7 +51,7 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="numberPassword"
         android:textColor="#ffffff"
         app:layout_constraintEnd_toEndOf="@+id/buttonaddexceercisee"
         app:layout_constraintHorizontal_bias="0.0"
