--- a/app/src/main/res/layout/activity_addfood_user.xml
+++ b/app/src/main/res/layout/activity_addfood_user.xml
@@ -50,7 +50,7 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textPersonName"
+       android:inputType="numberPassword"
         android:textColor="#ffffff"
         app:layout_constraintStart_toStartOf="@+id/textView5"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
