--- a/app/src/main/res/layout/app_listeditexcercise.xml
+++ b/app/src/main/res/layout/app_listeditexcercise.xml
@@ -23,7 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:text="รายการกิจกกรมของฉัน"
+            android:text="รายการกิจกกรมวันนี้"
             android:textAlignment="center"
             android:textColor="#FFFFFF"
             android:textSize="24dp"
