--- a/app/src/main/res/layout/listselect_edit_food_private.xml
+++ b/app/src/main/res/layout/listselect_edit_food_private.xml
@@ -18,7 +18,7 @@
             android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_weight="1"
-            android:textColor="#fff"
+            android:textColor="#000000"
             android:gravity="center_vertical"
             android:layout_height="match_parent"
             android:textSize="20dp"
@@ -32,7 +32,7 @@
             <TextView
                 android:id="@+id/kcal"
                 android:layout_width="match_parent"
-                android:textColor="#fff"
+                android:textColor="#000000"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textSize="20dp"
@@ -45,7 +45,7 @@
                 android:layout_weight="1"
                 android:textSize="20dp"
                 android:gravity="center"
-                android:textColor="#fff"
+                android:textColor="#000000"
                 android:text="kcal" />
         </LinearLayout>
 
@@ -53,5 +53,5 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#fff" />
+        android:background="#000000" />
 </LinearLayout>
