--- a/app/src/main/res/layout-hdpi/fragment_home_status_.xml
+++ b/app/src/main/res/layout-hdpi/fragment_home_status_.xml
@@ -7,10 +7,196 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/R1"
+        android:layout_height="wrap_content"
+        android:id="@+id/test"
+        >
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/box1"
         android:background="@drawable/background_object"
         >
+
+        <LinearLayout
+            android:id="@+id/Todate"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            >
+
+            <TextView
+           android:layout_width="wrap_content"
+           android:layout_height="match_parent"
+           android:text="น้ำหนักวันนี้"
+           android:gravity="center"
+           android:layout_weight="1"
+           ></TextView>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="79"
+                android:gravity="center"
+                android:layout_weight="1"
+                ></TextView>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="kg"
+                android:gravity="center"
+                android:layout_weight="1"
+                ></TextView>
+
+            <ImageView
+                android:id="@+id/addexcercise_private"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:gravity="center"
+                android:src="@drawable/ic_add_circle_black_24dp">
+            </ImageView>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/level_eat"
+            android:layout_below="@id/Todate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="ระดับรับประทานอาหารตอนนี้"
+            android:layout_weight="0.9"
+            android:paddingLeft="10dp"
+            ></TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="ปกติ"
+                android:layout_weight="1.5"
+                ></TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:layout_weight="1.5"
+                ></TextView>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/volumekalfood"
+            android:layout_below="@id/level_eat"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="ปริมารับเเคลอรี่วันนี้"
+            android:paddingLeft="10dp"
+            android:layout_weight="0.9"
+            ></TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="1200"
+                android:layout_weight="1.5"
+                ></TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="kcal"
+                android:layout_weight="1.5"
+                ></TextView>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/volumekalexcercise"
+            android:layout_below="@id/volumekalfood"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.9"
+            android:paddingLeft="10dp"
+            android:text="ปริมาณเเคลอรี่เผาผาญวันนี้"
+            ></TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="1300"
+                android:layout_weight="1.5"
+                ></TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="kcal"
+                android:layout_weight="1.5"
+                ></TextView>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/volumekalTodate"
+            android:layout_below="@id/volumekalexcercise"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0.9"
+                android:paddingLeft="10dp"
+                android:text="ปริมาณเเคลอรี่วันนี้"></TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="-100"
+                android:layout_weight="1.5"
+                ></TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="kcal"
+                android:layout_weight="1.5"
+                ></TextView>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/TEXTShow"
+            android:layout_below="@id/volumekalTodate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            >
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="น้ำหนักวันนี้"
+                android:paddingLeft="20dp"
+                ></TextView>
+        </LinearLayout>
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_below="@+id/box1"
+        android:background="@drawable/background_object"
+        >
+
 
         <RelativeLayout
             android:id="@+id/R2"
@@ -383,6 +569,8 @@
                 android:background="@drawable/button_login_style"
                 ></Button>
         </LinearLayout>
+
+    </RelativeLayout>
 
     </RelativeLayout>
 
